--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,15 @@
 
 export(fars_map_state)
 export(fars_summarize_years)
-import(dplyr)
-import(tidyr)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,summarize)
+importFrom(dplyr,tbl_df)
 importFrom(graphics,points)
 importFrom(maps,map)
 importFrom(readr,read_csv)
+importFrom(tidyr,spread)
