--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: rpkgtutorial
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Building R Package Practice
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Depends: R (>= 3.4.0)
+Imports: dplyr, maps, readr, tidyr
+Author: Yang Zhang
+Maintainer: Yang Zhang <yourself@somewhere.net>
+Description: This package is created as the assignment of the Building R 
+    Packages course on Coursera.
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Suggests: knitr,
