Update mannual files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,7 @@
 
 export(fars_map_state)
 export(fars_summarize_years)
-importFrom(dplyr,"%>%")
-importFrom(dplyr,bind_rows)
-importFrom(dplyr,filter)
-importFrom(dplyr,group_by)
-importFrom(dplyr,mutate)
-importFrom(dplyr,select)
-importFrom(dplyr,summarize)
-importFrom(dplyr,tbl_df)
+import(dplyr)
 importFrom(graphics,points)
 importFrom(maps,map)
 importFrom(readr,read_csv)
